# hackathon-an

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml
db/init/: 00_extensions.sql
docs/: data-sources.md  mcp-catalog.md
frontend/: .dockerignore  Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  declarations.d.ts  index.css  main.tsx  vite-env.d.ts  widgets.tsx
frontend/src/components/: AgentChatPopup.tsx  AgentSlashMenu.tsx  AttachMenu.tsx  ChannelPanel.tsx  ChannelSettings.tsx  ChannelsList.tsx  ChatPanel.tsx  Citation.tsx  (+37 more)
hackathon-an-2026/: DEFI.md
scripts/: bucket_e2e_probe.py  e2e_ws_test.py  gen_graphit_icons.py  hemicycle_probe.py  scen_chaining.py  scen_determinism.py  scen_memory.py  scen_memory2.py  scen_multiturn.py  scen_routing.py
services/gateway/: main.py  requirements.txt
services/orchestrator/: a2a_bridge.py  consumers.py  fsm.py  graphit_icons.py  llm.py  main.py  memory.py  requirements.txt  sweepers.py  test_a2a_geo.py  test_artifacts.py  test_fsm.py
services/seed/: main.py  requirements.txt
services/subagents/: disciplines.py  main.py  requirements.txt  sdk.py
shared/: pyproject.toml
shared/hemicycle_shared/: __init__.py  alert_event.py  artifact_store.py  artifacts.py  channels.py  config.py  llm_client.py  manifests.py  mcp_client.py  messages.py  nats_io.py  s3_docs.py  subjects.py
shared/hemicycle_shared/a2a/: __init__.py  card.py  client.py  probe.py  server.py
shared/hemicycle_shared/db/: __init__.py  models.py  session.py
(+42 files in other folders)
