[project]
name = "hemicycle-shared"
version = "0.1.0"
description = "Lib commune Hémicycle : subjects NATS, messages, manifests, modèles DB, I/O bus"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    # Framework LLM : Agent pydantic-ai + provider OpenAI (qwen via vLLM/litellm).
    # `-slim[openai]` = noyau pydantic-ai + provider OpenAI sans tirer tous les autres.
    "pydantic-ai-slim[openai]>=1.66.0",
    "nats-py>=2.7",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "pgvector>=0.2.5",
    "httpx>=0.27",
    "fastapi>=0.115",
    "sse-starlette>=2.1",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["hemicycle_shared*"]
